--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,22 @@ dependencies {
 	//Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 
+	//lombok
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	//Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	//mariaDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.2-rc'
 
 }
 
