--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,17 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+
 	//Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 
+	//mariaDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.2-rc'
 
+	//lombok
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
