--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//Junit
+	testImplementation group: 'junit', name: 'junit', version: '4.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	//Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
